# torchanfis

./: .gitignore  CONTRIBUTING.md  LICENSE-COMMERCIAL.md  README.md  pyproject.toml
benchmarks/: benchmark_torchanfis.py
tests/: conftest.py  test_torchanfis.py
torchanfis/: __init__.py  torchanfis.py
workflows/: python.yml
