[project]
name = "torchanfis"
version = "0.1.0"
authors = [
  { name="Mark Aull"},
]
description = "Adaptive Neuro-Fuzzy Inference System for Python based on PyTorch library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "scikit-learn"
]

license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/markaull/torchanfis"
Issues = "https://github.com/markaull/torchanfis/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

